--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences:
   intl:
   carousel_slider:
+  flutter_html: ^3.0.0-alpha.3
 
 dev_dependencies:
   flutter_test:
